--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3510,3 +3510,16 @@ input, select, textarea {
 			}
 
 	}
+
+	nav {
+		padding-top: 10px;
+		padding-bottom: -10px;
+	}
+
+	nav li {
+		list-style-type: none;
+		margin: 10px;
+		display: inline;
+		padding: 30px;
+		padding-bottom: 30px;;
+	}
